libinteraction-sparky (0.0.1-1365674048) @platform@; urgency=low

  * Commit e5d37bcc102e1d8dd425bc05883dbcc7f415e790
    + Added muparser and yaml-cpp as pkg-config requires for sparky.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 02:54:08 -0700

libinteraction-sparky (0.0.1-1365671956) @platform@; urgency=low

  * Commit acde808872c02d5ffec42b00ca01400ccfa87aee
    + Fixed more debian issues.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 02:19:16 -0700

libinteraction-sparky (0.0.1-1365667314) @platform@; urgency=low

  * Commit 88678337c74ad247ea2cecdec742af1b3884393c
    + Removed unnecessary links file.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 01:01:54 -0700

libinteraction-sparky (0.0.1-1365665280) @platform@; urgency=low

  * Commit c86f4e217ebb9ccafed847a0b37a5172de42428c
    + Fixed remaining sparky debian files.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 11 Apr 2013 00:28:00 -0700

libinteraction-sparky (0.1.0-1365654416) @platform@; urgency=low

  * Commit c2574535ec44065d5b9a5471dcbdadd4779fc25e
    + Added changelog.in for sparky.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Wed, 10 Apr 2013 21:26:56 -0700

libinteraction-sparky (0.1.0-1365654344) @platform@; urgency=low

  * Commit 93694473bdf607b7fcf8f140191a1f23f02fac9e
    + Updated sparky to working state.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Wed, 10 Apr 2013 21:25:44 -0700

libinteraction-sparky (0.1.0-1365639656) @platform@; urgency=low

  * Commit c9f9fb47af2d393dc6859de76fcaafab3709ec14
    + Unable to interface with hardware thus far; committing before testing older code

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Wed, 10 Apr 2013 17:20:56 -0700

libinteraction-sparky (0.1.0-1359025446) @platform@; urgency=low

  * Commit 429204dac20422d534663634ec58a962095a35e9
    + Prototyped new params document format.

 -- Edward T. Kaszubski <ekaszubski@gmail.com>  Thu, 24 Jan 2013 03:04:06 -0800
